--- a/client/src/stylesheets/Dashboard.css
+++ b/client/src/stylesheets/Dashboard.css
@@ -42,6 +42,7 @@
     justify-content: space-between;
     padding: 0 30px 0 30px;
     box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
+    color:#00055e;
 }
 
 .menu-icon {
