--- a/client/src/stylesheets/Home.css
+++ b/client/src/stylesheets/Home.css
@@ -29,7 +29,7 @@ p {
     margin-top: 90px;
 }
 
-h2 {
+.tagline{
     font-size: 25px;
     text-align: center;
     margin-left: 130px;
@@ -39,7 +39,7 @@ h2 {
     font-family: 'Raleway', sans-serif;
 }
 
-button {
+.button {
     appearance: none;
     background: transparent;
     border: 0;
